crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__groups-regular.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Regular groups <content> with scoped annotations, nested groups",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: group_with_annotations, greater_than, less_than,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "base_annotations, contents within groups",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "hey",
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "scoped_annotations": [
                {
                  "text": "foo",
                  "type": "explanation"
                }
              ],
              "type": "annotated_word"
            },
            {
              "cleaned_text": "man",
              "content": [
                {
                  "content": "man",
                  "type": "text"
                }
              ],
              "raw_text": "man",
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "cleaned_text": "what",
                    "content": [
                      {
                        "content": "what",
                        "type": "text"
                      }
                    ],
                    "raw_text": "what",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "in",
                    "content": [
                      {
                        "content": "in",
                        "type": "text"
                      }
                    ],
                    "raw_text": "in",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "the",
                    "content": [
                      {
                        "content": "the",
                        "type": "text"
                      }
                    ],
                    "raw_text": "the",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "world",
                    "content": [
                      {
                        "content": "world",
                        "type": "text"
                      }
                    ],
                    "raw_text": "world",
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "text": "bar",
                  "type": "explanation"
                }
              ],
              "type": "annotated_group"
            },
            {
              "cleaned_text": "isn't",
              "content": [
                {
                  "content": "isn't",
                  "type": "text"
                }
              ],
              "raw_text": "isn't",
              "scoped_annotations": [
                {
                  "text": "baz",
                  "type": "explanation"
                }
              ],
              "type": "annotated_word"
            },
            {
              "cleaned_text": "this",
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "cleaned_text": "the",
                    "content": [
                      {
                        "content": "the",
                        "type": "text"
                      }
                    ],
                    "raw_text": "the",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "big",
                    "content": [
                      {
                        "content": "big",
                        "type": "text"
                      }
                    ],
                    "raw_text": "big",
                    "type": "word"
                  }
                ]
              },
              "is_group": true,
              "kind": "partial",
              "type": "retrace"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "small",
              "content": [
                {
                  "content": "small",
                  "type": "text"
                }
              ],
              "raw_text": "small",
              "type": "word"
            },
            {
              "cleaned_text": "dog",
              "content": [
                {
                  "content": "dog",
                  "type": "text"
                }
              ],
              "raw_text": "dog",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": {
                      "content": [
                        {
                          "cleaned_text": "happy",
                          "content": [
                            {
                              "content": "happy",
                              "type": "text"
                            }
                          ],
                          "raw_text": "happy",
                          "type": "word"
                        },
                        {
                          "cleaned_text": "and",
                          "content": [
                            {
                              "content": "and",
                              "type": "text"
                            }
                          ],
                          "raw_text": "and",
                          "type": "word"
                        }
                      ]
                    },
                    "scoped_annotations": [
                      {
                        "type": "uncertain"
                      }
                    ],
                    "type": "annotated_group"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_end"
                }
              ],
              "type": "annotated_group"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": {
                      "content": [
                        {
                          "cleaned_text": "see",
                          "content": [
                            {
                              "content": "see",
                              "type": "text"
                            }
                          ],
                          "raw_text": "see",
                          "type": "word"
                        },
                        {
                          "cleaned_text": "the",
                          "content": [
                            {
                              "content": "the",
                              "type": "text"
                            }
                          ],
                          "raw_text": "the",
                          "type": "word"
                        }
                      ]
                    },
                    "scoped_annotations": [
                      {
                        "type": "uncertain"
                      }
                    ],
                    "type": "annotated_group"
                  },
                  {
                    "cleaned_text": "working",
                    "content": [
                      {
                        "content": "working",
                        "type": "text"
                      }
                    ],
                    "raw_text": "working",
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_begin"
                }
              ],
              "type": "annotated_group"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": {
                      "content": [
                        {
                          "cleaned_text": "ingroup",
                          "content": [
                            {
                              "content": "ingroup",
                              "type": "text"
                            }
                          ],
                          "raw_text": "ingroup",
                          "type": "word"
                        }
                      ]
                    },
                    "kind": "partial",
                    "type": "retrace"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_begin"
                }
              ],
              "type": "annotated_group"
            },
            {
              "cleaned_text": "after",
              "content": [
                {
                  "content": "after",
                  "type": "text"
                }
              ],
              "raw_text": "after",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
