crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__groups-sign.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "groups-sign",
        "media_type": "video",
        "status": "unlinked",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Sign language groups on main tier using CJK brackets",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: main_sin_group, sin_begin_group, sin_end_group",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "content": "g:toy:dpoint",
                "type": "token"
              },
              {
                "content": "b",
                "type": "token"
              },
              {
                "content": [
                  "c",
                  "d"
                ],
                "type": "sin_group"
              },
              {
                "content": "e",
                "type": "token"
              }
            ]
          },
          "type": "Sin"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "type": "annotated_action"
            },
            {
              "cleaned_text": "foo",
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                }
              ],
              "raw_text": "foo",
              "type": "word"
            },
            {
              "type": "annotated_action"
            },
            {
              "content": {
                "content": [
                  {
                    "cleaned_text": "bar",
                    "content": [
                      {
                        "content": "bar",
                        "type": "text"
                      }
                    ],
                    "raw_text": "bar",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "baz",
                    "content": [
                      {
                        "content": "baz",
                        "type": "text"
                      }
                    ],
                    "raw_text": "baz",
                    "type": "word"
                  }
                ]
              },
              "type": "sin_group"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "media": {
    "filename": "groups-sign",
    "media_type": "video",
    "status": "unlinked"
  },
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
