crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__headers-comments.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "headers-comments",
        "media_type": "video",
        "status": "unlinked",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Comment and warning headers with multi-line continuation",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: comment_header, warning_header, anything,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "text_with_bullets_and_pics, continuation, rest_of_line",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "CHI points to the shelf ",
              "type": "text"
            },
            {
              "end_ms": 1567,
              "start_ms": 1234,
              "type": "bullet"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "text": "audio quality degrades after minute 15",
        "type": "warning"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "tell",
              "content": [
                {
                  "content": "tell",
                  "type": "text"
                }
              ],
              "raw_text": "tell",
              "type": "word"
            },
            {
              "cleaned_text": "me",
              "content": [
                {
                  "content": "me",
                  "type": "text"
                }
              ],
              "raw_text": "me",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "story",
              "content": [
                {
                  "content": "story",
                  "type": "text"
                }
              ],
              "raw_text": "story",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "CHI is pointing at the bookshelf while asking",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "this question, looking at MOT",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "once",
              "content": [
                {
                  "content": "once",
                  "type": "text"
                }
              ],
              "raw_text": "once",
              "type": "word"
            },
            {
              "cleaned_text": "upon",
              "content": [
                {
                  "content": "upon",
                  "type": "text"
                }
              ],
              "raw_text": "upon",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "time",
              "content": [
                {
                  "content": "time",
                  "type": "text"
                }
              ],
              "raw_text": "time",
              "type": "word"
            },
            {
              "cleaned_text": "there",
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "type": "word"
            },
            {
              "cleaned_text": "was",
              "content": [
                {
                  "content": "was",
                  "type": "text"
                }
              ],
              "raw_text": "was",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "little",
              "content": [
                {
                  "content": "little",
                  "type": "text"
                }
              ],
              "raw_text": "little",
              "type": "word"
            },
            {
              "cleaned_text": "bear",
              "content": [
                {
                  "content": "bear",
                  "type": "text"
                }
              ],
              "raw_text": "bear",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "media": {
    "filename": "headers-comments",
    "media_type": "video",
    "status": "unlinked"
  },
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
