crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__headers-episodes.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Episode and inline headers: @New Episode, @G, @Bg, @Eg, @Bck, @Blank, @Number, @Page, @T",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: new_episode_header, g_header, bg_header, eg_header,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "bck_header, blank_header, number_header, page_header, t_header",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "bck": "background noise from traffic outside",
        "type": "bck"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": "morning routine",
        "type": "lazy_gem"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "want",
              "content": [
                {
                  "content": "want",
                  "type": "text"
                }
              ],
              "raw_text": "want",
              "type": "word"
            },
            {
              "cleaned_text": "cereal",
              "content": [
                {
                  "content": "cereal",
                  "type": "text"
                }
              ],
              "raw_text": "cereal",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "okay",
              "content": [
                {
                  "content": "okay",
                  "type": "text"
                }
              ],
              "raw_text": "okay",
              "type": "word"
            },
            {
              "cleaned_text": "let",
              "content": [
                {
                  "content": "let",
                  "type": "text"
                }
              ],
              "raw_text": "let",
              "type": "word"
            },
            {
              "cleaned_text": "me",
              "content": [
                {
                  "content": "me",
                  "type": "text"
                }
              ],
              "raw_text": "me",
              "type": "word"
            },
            {
              "cleaned_text": "get",
              "content": [
                {
                  "content": "get",
                  "type": "text"
                }
              ],
              "raw_text": "get",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "bowl",
              "content": [
                {
                  "content": "bowl",
                  "type": "text"
                }
              ],
              "raw_text": "bowl",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "text": "cereal preparation",
        "type": "t"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "new_episode"
      },
      "line_type": "header"
    },
    {
      "header": {
        "number": "2",
        "type": "number"
      },
      "line_type": "header"
    },
    {
      "header": {
        "page": "42",
        "type": "page"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": "afternoon play",
        "type": "begin_gem"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "can",
              "content": [
                {
                  "content": "can",
                  "type": "text"
                }
              ],
              "raw_text": "can",
              "type": "word"
            },
            {
              "cleaned_text": "we",
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "type": "word"
            },
            {
              "cleaned_text": "go",
              "content": [
                {
                  "content": "go",
                  "type": "text"
                }
              ],
              "raw_text": "go",
              "type": "word"
            },
            {
              "cleaned_text": "outside",
              "content": [
                {
                  "content": "outside",
                  "type": "text"
                }
              ],
              "raw_text": "outside",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "blank"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "sure",
              "content": [
                {
                  "content": "sure",
                  "type": "text"
                }
              ],
              "raw_text": "sure",
              "type": "word"
            },
            {
              "cleaned_text": "let",
              "content": [
                {
                  "content": "let",
                  "type": "text"
                }
              ],
              "raw_text": "let",
              "type": "word"
            },
            {
              "cleaned_text": "us",
              "content": [
                {
                  "content": "us",
                  "type": "text"
                }
              ],
              "raw_text": "us",
              "type": "word"
            },
            {
              "cleaned_text": "get",
              "content": [
                {
                  "content": "get",
                  "type": "text"
                }
              ],
              "raw_text": "get",
              "type": "word"
            },
            {
              "cleaned_text": "your",
              "content": [
                {
                  "content": "your",
                  "type": "text"
                }
              ],
              "raw_text": "your",
              "type": "word"
            },
            {
              "cleaned_text": "shoes",
              "content": [
                {
                  "content": "shoes",
                  "type": "text"
                }
              ],
              "raw_text": "shoes",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "label": "afternoon play",
        "type": "end_gem"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": null,
        "type": "begin_gem"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "look",
              "content": [
                {
                  "content": "look",
                  "type": "text"
                }
              ],
              "raw_text": "look",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "butterfly",
              "content": [
                {
                  "content": "butterfly",
                  "type": "text"
                }
              ],
              "raw_text": "butterfly",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "label": null,
        "type": "end_gem"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
